--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -597,6 +597,7 @@ changeLog:
   - type: *dataIssue
     date: "2021-03-01"
     displayBanner: false
+    relativeUrl:
     headline: No update to Scotland cases by specimen date and deaths by date of death 
     body: >
       Cases and deaths data were not available for Scotland at time of processing for the dashboard. This will be updated in the next release.
@@ -604,6 +605,7 @@ changeLog:
   - type: *dataIssue
     date: "2021-02-27"
     displayBanner: false
+    relativeUrl:
     headline: Issue with deaths following a positive test at local authority and region levels in England 
     body: >
       Owing to a technical difficulty, it has not been possible to assign lower and upper tier local 
