amended change log

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -92,7 +92,7 @@ changeLog:
       which provides a greater level of detail about the vaccination programme. It replaces the previous manual system which relied on a 
       variety of platforms with differing reporting mechanisms.
       
-      In developing the system, some data may have been amended slightly upwards or downwards, however the overall figures are consistent. 
+      In developing the system, some data have been amended, however the overall total is consistent. 
       This includes re-classifying a small percentage of first doses as second doses, reflecting the improved data accuracy of the new system.
 
   - type: *dataIssue
