--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -83,6 +83,15 @@ colours:
 
 changeLog:
   - type: *dataIssue
+    date: "2021-05-01"
+    displayBanner: false
+    relativeUrl: "https://coronavirus.data.gov.uk/details/vaccinations?areaType=nation&areaName=Northern%20Ireland"
+    headline: Revision to vaccinations data for Northern Ireland
+    body: |
+      The vaccination figures for Northern Ireland from 30 April 2021 have been revised to match figures as published at 16:58 on the 
+      [NI Covid-19 Vaccinations Dashboard](https://covid-19.hscni.net/ni-covid-19-vaccinations-dashboard/). These figures were ammended after yesterday's release. 
+  
+  - type: *dataIssue
     date: "2021-04-30"
     displayBanner: true
     relativeUrl: 
