--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -82,6 +82,15 @@ colours:
 
 
 changeLog:
+
+  - type: *dataIssue
+    date: "2021-05-03"
+    displayBanner: false
+    relativeUrl: 
+    headline: Deaths data unavaiable below UK level.
+    body: |
+      Due to an issue with processing of deaths data today, data other than the UK figure is unavailable. 
+
   - type: *dataIssue
     date: "2021-05-01"
     displayBanner: false
