--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -2,7 +2,7 @@
   disappearByUpdate: "2021-05-04"
   date: "2021-05-03"
   body: >
-    Deaths data unavailable below UK level. [More](/details/whats-new)
+    Latest deaths data unavailable below UK level. [More](/details/whats-new)
 
 # {{ StartDevOnlyBlock }}
 
