--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -82,6 +82,15 @@ colours:
 
 
 changeLog:
+  - type: *newContent
+    date: "2021-05-06"
+    displayBanner: false
+    relativeUrl: 
+    headline: Addition of vaccination content to landing page
+    body: |
+      The daily numbers of newly reported people vaccinated by dose have been addeed to the landing page. The percentage of the adult 
+      population who have received each dose is also displayed and visualised.
+
   - type: *dataIssue
     date: "2021-05-06"
     displayBanner: false
