--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -91,7 +91,8 @@ changeLog:
       The source of pillar 2 PCR tests conducted for England has changed. 
       Previously, the number of tests conducted was collated daily from individual laboratories in England based on the day the test was processed. 
       These data are now supplied by NHS Test and Trace digital management information systems, using the date that the test was taken (specimen date). 
-      This difference in the way the tests are being reported has resulted in a small revision to the total PCR virus tests conducted for the UK and England. 
+      This difference in the way the tests are being reported has resulted in a small revision to the cumulative total PCR virus tests conducted for the UK and England. 
+      The historical daily series for England and the UK have not been revised. 
       This new source aligns with that used in the [weekly statistics for NHS Test and Trace](https://www.gov.uk/government/collections/nhs-test-and-trace-statistics-england-weekly-reports), 
       and with that used for rapid lateral flow (LFD) tests.
       
