--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -86,9 +86,9 @@ changeLog:
     date: "2021-05-14"
     displayBanner: true
     relativeUrl: "/details/testing?areaType=nation&areaName=England"
-    headline: Change to source of pillar 2 PCR tests in England
+    headline: Change to source of pillar 2 PCR tests data in England
     body: |
-      The source of pillar 2 PCR tests conducted for England has changed. 
+      The data source of pillar 2 PCR tests conducted for England has changed. 
       Previously, the number of tests conducted was collated daily from individual laboratories in England based on the day the test was processed. 
       These data are now supplied by NHS Test and Trace digital management information systems, using the date that the test was taken (specimen date). 
       This difference in the way the tests are being reported has resulted in a small revision to the cumulative total PCR virus tests conducted for the UK and England. 
