changes chart type in vacc card

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1460,7 +1460,7 @@ cards:
 # nation only
 
   - heading: Vaccination uptake, by report date
-    cardType: multiAreaStatic
+    cardType: chart
     locationAware:
       included: 
         areaType:
