--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1520,8 +1520,9 @@ cards:
     cardType: chart
     locationAware:
       included: 
-        areaType:
-          - nation
+        areaName:
+          - England
+          - Scotland
 
     fullWidth: true
     abstract: >
@@ -1779,7 +1780,7 @@ cards:
               tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
 
             - label: "2nd dose (%)"
-              value: cumVaccinationSecondDoseUptakeByPublishDatePercentage
+              value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
               type: numeric
               tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine             
 
