--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1095,6 +1095,9 @@ cards:
         filename: cardMetadata/vaccinations/cardVaccinationsGivenDaily.md
 
 ############################################################################################################################# 
+############################################################################################################################# 
+############################################################################################################################# 
+############################################################################################################################# 
 
 # {{ StartDevOnlyBlock }}
 
@@ -1789,6 +1792,9 @@ cards:
         filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
 
 ############################################################################################################################# 
+############################################################################################################################# 
+############################################################################################################################# 
+
 
 # local authorities / regions
 
@@ -2072,6 +2078,207 @@ cards:
         filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
 
 ############################################################################################################################# 
+
+##############################################################################################################################
+
+  - heading: Vaccination uptake by area
+    cardType: simpleTableStatic
+    fullWidth: false
+    abstract: >
+      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+      by dose, up to the latest day on which vaccine data were reported.
+
+    download:
+      - cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+      - cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+
+    tabs:
+      - heading: UK
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: overview
+
+        latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 1st dose (%)
+            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
+
+          - label: 2nd dose (%)
+            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
+
+      - heading: Nation
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
+
+        latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 1st dose (%)
+            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
+
+          - label: 2nd dose (%)
+            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
+
+      - heading: Region
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: region
+
+        latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 1st dose (%)
+            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
+
+          - label: 2nd dose (%)
+            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
+
+      - heading: Upper tier LA
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: utla
+
+        latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+        sortBy: areaName
+        searchBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 1st dose (%)
+            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
+
+          - label: 2nd dose (%)
+            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
+
+      - heading: Lower tier LA
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: ltla
+
+        latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+        sortBy: areaName
+        searchBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 1st dose (%)
+            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
+
+          - label: 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
+
+          - label: 2nd dose (%)
+            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
+
+      - heading: About
+        tabType: metadata
+        filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+
 
 
 # {{ EndDevOnlyBlock }}
